Prevent seleted user avatar from being squished when there are many friends

--- a/src/html-css/styles.css
+++ b/src/html-css/styles.css
@@ -1,8 +1,6 @@
 body, html {
-  /* background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%); */
   background-repeat: no-repeat;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -64,15 +62,19 @@ body, html {
 
 .user-avatar {
   border-radius: 50%;
-  margin-top: -30px;
   border: 0px;
   width: 45%;
-  font-size: larger;
+  height: 10vh;
+  margin-bottom: -30%;
+  margin-top: -20%;
+  font-size:xx-large;
 }
 
 .single-friend {
   display: flex;
   align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .friend-avatar {
@@ -85,20 +87,11 @@ body, html {
   border: 0px;
   height: 40px;
   width: 40px;
-  background-color: #FBFEF9;
   font-size: small;
 }
 
-.user-avatar {
-  height: 10vh;
-  margin-bottom: -30%;
-  margin-top: -20%;
-  font-size:xx-large;
-  
-}
-
 .user-tab {
-  height: 40vh;
+  height: 65vh;
   width: 12vw;
   margin-top: 3%;
   margin-bottom: 3%;
@@ -111,7 +104,7 @@ body, html {
 
 .user-name {
   margin-top: 35%;
-  margin-bottom: 30%;
+  padding-bottom: 5%;
 }
 
 .hidden {
